Style: fix problem on mobile with antd fixed column and unset background on hover
The root of problem was setting in theme.js table-row-hover-bg to unset. It caused removing background from fixed columns - on mobile during clicking a date it looked as a bug

--- a/src/modules/Habit/components/HabitTable/HabitTable.module.less
+++ b/src/modules/Habit/components/HabitTable/HabitTable.module.less
@@ -94,6 +94,12 @@
 .StreakCol {
   padding: 0 !important;
   text-align: center;
+
+  &:global {
+    &.ant-table-cell-row-hover {
+      background-color: var(--layout-body-background) !important;
+    }
+  }
 }
 
 .StreakHeader {
@@ -106,6 +112,12 @@
 
 .NameCol {
   max-width: 400px;
+
+  &:global {
+    &.ant-table-cell-row-hover {
+      background-color: var(--layout-body-background) !important;
+    }
+  }
 }
 
 .HabitName {
